# cambricon_mlu_learning

./: README.md
13_PyTorch/: resnet50_imagenet.py
13_PyTorch/pytorch_infer/: resnet50_imagenet_mm.py
15_magicmind/cn_mm2/: pt_to_mm.py
15_magicmind/cn_mm3/sample_convrelu/: README.md  graph  sample_convrelu.py
15_magicmind/cn_mm4/: graph_run.sh  predict_on_resnet50.py
21_BANG/CN_BANG02/: add  add.cpp  add.mlu  bin  cncc_kernel_add.sh  kernel_add.mlu
21_BANG/CN_BANG03/: add  add_opt.mlu  cncc_add_opt.sh
22_Tools/CNPerf/: add  timechart_data.json
22_Tools/CNPerf/dltrace_data/: mlu_basic_info
22_Tools/CNServing/cnserving_sample_code/: requirements_client.txt
23_PyTorch/pytorch_yolov5_train/: README.md  apply_patch.sh  pytorch_yolov5_train.ipynb  yolov5_mlu.patch
23_PyTorch/pytorch_yolov5_train/.ipynb_checkpoints/: prepare-checkpoint.sh  pytorch_yolov5_train-checkpoint.ipynb
23_PyTorch/pytorch_yolov5_train/yolov5/: train.py  val.py
24_TensorFlow/: README.md
24_TensorFlow/tf_amp/: Horovod_Bert_AMP_2E_8MLUs.sh  Horovod_Bert_Float32_2E_2MLUs.sh
24_TensorFlow/tf_horovod/: Bert_Float32_2E_1MLU.sh
25_MagicMind/mm_amp/cn_mm_amp/op_amp/: CMakeLists.txt  README.md
25_MagicMind/mm_amp/cn_mm_amp/op_amp/include/: sample_buffer.h  sample_common.h
25_MagicMind/mm_amp/cn_mm_amp/op_amp/sample_api/: sample_model.cc
25_MagicMind/mm_performance_optimization/: profiling_test.py
25_MagicMind/mm_performance_optimization/bin_file/: test.npy
25_MagicMind/mm_precision_tuning/: convert_pt.py  dump_pytorch.py  infer_mm_with_dump.py  input_graph.txt  preprocess.py
(+27 files in other folders)
